sintatico.py
from os import error
import re

class AnaliseSintatica():
    def __init__(self, token_collection):
        self.tokens = token_collection
        self.index = 0
        self.errors = []
        self.errors_string = ''

    def start(self):
        self.consts_block()
        self.variables_block()
        self.class_block()
        print(self.errors_string)

    ###############         Funções auxiliares para análise          ###############

    def next_token(self):
        #print(self.current_token())
        self.index +=1

    #   refere-se ao token anterior com relação ao ponteiro
    def last_token(self):
        return self.tokens[self.index-1] if self.index > 0 else self.current_token()

    def current_token(self):
        return self.tokens[self.index] if self.index < len(self.tokens) else dict(n_line = '',token_class = '',token_text = '')
                                                                                  
    def current_token_line(self):
        return self.current_token()['n_line']

    def current_token_class(self):
        return self.current_token()['token_class']

    def current_token_text(self):
        return self.current_token()['token_text']
    
    def write_error(self, e: SyntaxError):
        message = f'{e.msg}, {self.current_token_text()} in line {self.tokens[self.index-1]["n_line"]}'
        self.errors.append(message)
        self.errors_string = f'{self.errors_string} \n {message}'
        # sincronizar/tratamento de erros

    def error(self, text):
        raise SyntaxError (text)

    ###############         Produções da gramática          ###############

    # Terminais <TYPE>
    def match_TYPE(self):
        v = self.current_token_text()
        type_pattern = re.compile(r'^(int|string|real|boolean|void)')
        return bool(type_pattern.match(v))
    
    # Terminais <ATTRIBUTION>
    def match_ATTRIBUTION(self):
        v = self.current_token_text()
        return isinstance(v, (int, float, complex, str, bool))
    
    #  Terminais ART_DOUBLE (classificacao)
    def match_ART_DOUBLE(self):
        return (self.current_token_text() == '++' or self.current_token_text() == '--')

    def match_Bool(self):
        return (self.current_token_text() == 'true' or self.current_token_text() == 'false')

    # Bloco <CONSTS_BLOCK>
    def consts_block(self):
        try: 
            if self.current_token_text() == 'const':
                self.next_token()
                if self.current_token_text() == '{':
                    self.next_token()
                    self.consts()
                else:
                    self.error('Expected "{"')
        except SyntaxError as e:
            self.write_error(e)

    #   CONSTS (recursao para gerar varias)
    def consts(self):
        try:
            if self.current_token_text() == "}":
                self.next_token()
            elif self.match_TYPE():
                self.const()
                self.consts()
            else:
                self.error('Expected "}" or "const"')
        except SyntaxError as e:
            self.write_error(e)

    #   <CONST>
    def const(self):
        try: 
            if self.match_TYPE():
                self.next_token()
                self.const_attribution()
                self.multiple_consts()
                # não precisa de next aqui, o multiple_consts já consumiu
            else:
                self.error('Expected <TYPE>')
        except SyntaxError as e:
            self.write_error(e=e)

    #   <CONST_ATTRIBUTION>
    def const_attribution(self):
        try:
            if self.current_token_class() == 'IDE':
                self.next_token()
                if self.current_token_text() == '=':
                    self.next_token()
                    if self.match_ATTRIBUTION():
                        self.next_token()
                    else:
                        self.error('Expected "<NRO> or Bool or <CAC>"')
                else:
                    self.error('Expected "="')
            else:
                self.error('Expected <IDE>')
        except SyntaxError as e:
            self.write_error(e=e)

    #   Bloco <MULTIPLE_CONSTS>
    def multiple_consts(self):
        try:
            if self.current_token_text() == ',':
                self.next_token()
                self.const_attribution()
                self.multiple_consts()
            elif self.current_token_text() == ';':
                self.next_token()
            else:
                self.error('Expected "," or ";" ')
        except SyntaxError as e:
            self.write_error(e)

    # Bloco <VARIABLES_BLOCK>
    def variables_block (self):
        try:
            if self.current_token_text() == 'variables':
                self.next_token()
                if self.current_token_text() == '{':
                    self.next_token()
                    self.variables()
                else:
                    raise SyntaxError ('Expected "{"')
        except SyntaxError as e:
            self.write_error(e)
    
    #   <VARIABLES>
    def variables(self):
        try:
            if self.match_TYPE():
                self.variable()
                self.variables()
            elif self.current_token_text() == '}':
                self.next_token()
            else:
                self.error('Expected "}" or <TYPE>')
        except SyntaxError as e:
            self.write_error(e)

    #   Bloco <VARIABLE>
    def variable(self):
        try:
            if self.match_TYPE():
                self.next_token()
                self.dec_var() #
                self.multiple_variables_line()  #
            else:
                self.error('Expected <TYPE>')
        except SyntaxError as e:
            self.write_error(e=e)
    
    # Bloco <DEC_VAR>   declaracao de variavel
    def dec_var(self):
        try:
            if (self.current_token_class() == "IDE"):
                self.next_token()
                self.dimensions()
            else:
                self.error('Expected <IDE>')
        except SyntaxError as e:
            self.write_error(e)

    #   Bloco <DIMENSIONS>
    #<DIMENSIONS> ::= '[' <SIZE_DIMENSION> ']' <DIMENSIONS>
                # |
    def dimensions(self):
        try:
            if self.current_token_text() == '[':
                self.next_token()
                self.size_dimension()
                if self.current_token_text() == "]":
                    self.next_token()
                    self.dimensions()   # r a direita
                else:
                    self.error('Expected "]"')
            else:
                pass
        except SyntaxError as e:
            self.write_error(e)

    #   <SIZE_DIMENSION>
    def size_dimension(self):
        try:
            if self.current_token_class() == 'IDE' or self.current_token_class() == 'NRO':
                self.next_token()
            else:
                self.error("Expected <NRO> or <IDE>")
        except SyntaxError as e:
            self.write_error(e=e)

    #   <MULTIPLE_VARIABLES_LINE>
    def multiple_variables_line(self):
        try:
            if self.current_token_text() == ';':
                self.next_token()
            elif self.current_token_text() == ',':
                self.next_token()
                self.dec_var()
                self.multiple_variables_line()
            else:
                self.error('Expected ";" or ","')
        except SyntaxError as e:
            self.write_error(e=e)

    #   Bloco <CLASS_BLOCK>

    ###############         Produções da gramática          ###############

    #bloco de objetos 
    def objects_block(self):
        try:
            if self.current_token_text() == 'objects':
                self.next_token()
                if self.current_token_text() == '{':
                    self.next_token()
                    self.objects()
                else:
                    self.error('Expected "{"')
        except SyntaxError as e:
            self.write_error(e)    
    

    def objects(self): #duvida nesse 
        try:
            if self.current_token_class() == 'IDE':
                self.object()
                self.objects()
            elif self.current_token_text() == '}':
                self.next_token() 
            else:
                self.error('Expected <IDE> or "}"')
        except SyntaxError as e:
            self.write_error(e)
    
    def object(self):
        try:
            if self.current_token_class() == 'IDE':
                self.next_token()
                self.dec_var()
                self.multiple_objects()
            else:
                self.error('Expected <IDE>')
        except SyntaxError as e:
            self.write_error(e)
    
    def multiple_objects(self):
        try:
            if self.current_token_text() == ';':
                self.next_token()
            elif self.current_token_text() == ',':
                self.next_token()
                self.dec_var()
                self.multiple_objects()
            else:
                self.error('Expected ";" or ","')
        except SyntaxError as e:
            self.write_error(e)

# main

    def main_methods(self):
        try:
            if self.current_token_text() == 'methods':
                self.next_token()
                if self.current_token_text() == '{':
                    self.next_token()
                    self.main_methods_body()
                    if self.current_token_text() == '}':
                        self.next_token()
                    else:
                        self.error('Expected "}"')
                else:
                    self.error('Expected "{"')
            else:
                self.error('Expected "methods"')
        except SyntaxError as e:
            self.write_error(e)
    
    def main_methods_body(self):
        try:
            self.main_type()
            if self.current_token_text() == 'main':
                self.next_token()
                if self.current_token_text() == '(':
                    self.next_token()
                    if self.current_token_text() == ')':
                        self.next_token()
                        if self.current_token_text() == '{':
                            self.next_token()
                            self.method_body()
                            self.methods()  
                        else:
                            self.error('Expected "{"')
                    else:
                        self.error('Expected ")"')
                else:
                    self.error('Expected "("')
            else:
                self.error('Expected "main"')
        except SyntaxError as e:
            self.write_error(e)
    
    #   <METHOD_BODY>
    def method_body(self):
        self.variables_block()
        self.objects_block()
        self.commands_method_body()
        
    def commands_method_body(self):
        try:
            self.commands()
            if self.current_token_text() == 'return':
                self.next_token()
                self.return_block() 
                #print(self.current_token_text())    # return_block equivalente a <RETURN>
                if self.current_token_text() == ';':
                    self.next_token()
                    if self.current_token_text() == '}':
                        self.next_token()
                #     else:
                #         self.error('Expected "}')
                # else:
                #     self.error('Expected ";"')
            else:
                print(f'-------- {self.last_token()}')
                print(f'-------- {self.current_token()}')
                
                print(f"-> {self.current_token_class()} aqui")
                self.error('Expected "return"')
        except SyntaxError as e:
            self.write_error(e=e)
    
    def match_value_firsts(self):
        return bool(self.current_token_text() in ["[" , "!" , "("] or self.current_token_class() in [ 'NRO' , 'CAC' , 'IDE'] or self.match_Bool())

    def return_block(self):
        try:
            if self.match_value_firsts():
                self.next_token()
                #self.value()
            else:
                pass
        except:
            pass

    def value(self): #TODO parei de verificar blocos nessa função
        try:
            if self.current_token_class() == 'NRO':
                self.simple_or_double_arithmetic_expression_optional()
            elif self.match_Bool():
                self.next_token()
            elif self.current_token_class() == 'CAC':
                self.next_token()
            elif self.current_token_class() == 'IDE':
                self.next_token()
            elif self.current_token_text() == '[':
                self.next_token()
            elif self.current_token_text() == '!':
                self.logical_expression_begin()
                self.logical_expression_end()
            elif self.current_token_text() == '(':
                self.arithmethic_or_logical_expression_with_parentheses()
            else:
                pass
                #self.error('Expected any of the following: \n\t\t "[" , "!" , "(" , <BOOL> , <NRO> , <CAC> , <IDE>')
        except SyntaxError as e:
            self.write_error(e)

    def arithmethic_or_logical_expression_with_parentheses(self):
        try:
            if self.current_token_text() == '(':
                self.next_token()
                self.expressions()
                if self.current_token_text() == ')':
                    self.next_token()
                    self.expressions_without_parentheses_end()
                else:
                    self.error('Expected ")"')
            else:
                self.error('Expected "("')
        except SyntaxError as e:
            self.write_error(e)
    
    def expressions(self):
        try:
            if self.current_token_text() == '(':
                self.parentheses_begin()
            elif self.current_token_class() == 'NRO':
                self.simple_expression_without_parentheses()
            elif self.match_Bool():
                self.logical_expression_without_parentheses()
            elif self.current_token_class() == 'IDE':
                self.simple_or_logical_ide_begin()
            else:
                self.error('Expected "(" or <NRO> or "true","false" or <IDE>')
                # TODO verificar qual erro é escrito no final - ou se tds sao escritos
        except SyntaxError as e:
            self.write_error(e)

    def simple_or_logical_ide_begin(self):
        try:
            if self.current_token_class() == 'IDE':
                self.dec_object_attribute_access()
                self.simple_or_logical_ide_end()
            else:
                self.error('Expected <IDE>')
        except SyntaxError as e:
            self.write_error(e)

    def simple_or_logical_ide_end(self):
        try:
            if self.current_token_class() == 'ART':
                self.end_expression()
            elif self.current_token_text() == '->':
                print("22",self.current_token_text())
                self.optional_object_method_access()
                self.log_rel_optional()
                self.logical_expression_end()
            else:
                self.error('Expected <ART> or "->"')
        except SyntaxError as e:
            self.write_error(e)

    def logical_expression_without_parentheses(self):
        try:
            if self.match_Bool():
                self.next_token()
                self.logical_expression_end()
            elif self.current_token_text() == '!':
                self.next_token()
                self.logical_expression_begin()
                self.logical_expression_end()
            else:
                self.error('Expected "true", "false" or "!"')
        except SyntaxError as e:
            self.write_error(e=e)

    def simple_expression_without_parentheses(self):
        try:
            if self.current_token_class() == 'NRO':
                self.next_token()
                self.end_expression()
            else:
                self.error('Expected <NRO>')
        except SyntaxError as e:
            self.write_error(e)

    def parentheses_begin(self):
        try:
            if self.current_token_text() == '(':
                self.next_token()
                self.expressions()
                self.parentheses_end()
            else:
                self.error('Expected "("')
        except SyntaxError as e:
            self.write_error(e)
    
    def parentheses_end(self):
        try:
            if self.current_token_text() == ')':
                self.next_token()
                self.expressions_without_parentheses_end()
            else:
                self.error('Expected ")"')
        except SyntaxError as e:
            self.write_error(e)

    def expressions_without_parentheses_end(self):
        try:
            if self.current_token_class() == 'ART':
                self.end_expression()
            elif self.current_token_class() == 'LOG':
                self.next_token()
                self.logical_expression_begin()
                self.logical_expression_end()
            else:
                pass
        except:
            pass

    # bloco <SIMPLE_OR_DOUBLE_ARITHIMETIC_EXPRESSION_OPTIONAL>
    def simple_or_double_arithmetic_expression_optional(self):
        try:
            self.simple_or_double_arithmethic_expression()
        except:
            pass
        else:
            pass

    def simple_or_double_arithmethic_expression(self):
        try:
            if self.match_ART_DOUBLE():
                self.next_token()
            elif self.current_token_class() == 'ART':
                self.end_expression()
            else:
                self.error('Expected "++" , "--" or <ART>')
        except SyntaxError as e:
            self.write_error(e)
    
    def end_expression(self):
        try:
            if self.current_token_class() == 'ART':
                self.part_loop()
            else:
                self.error("Expected '+' , '-' , '*' or '/'")
        except SyntaxError as e:
            self.write_error(e)

    def end_expression_optional(self):
        try:
            if self.current_token_class() == 'ART':
                self.end_expression()
            else:
                pass
        except:
            pass
    
    def simple_expression(self):
        try:
            if self.current_token_class() == 'NRO':
                self.part()
                self.end_expression()
            elif self.current_token_text() == '(':
                self.parenthesis_expression()
            else:
                self.error('Expected "(" or <NRO>')
        except SyntaxError as e:
            self.write_error(e)

    def parenthesis_expression(self):
        try:
            if self.current_token_text() == '(':
                self.next_token()
                self.simple_expression()
                if self.current_token_text() == ')':
                    self.next_token()
                    self.end_expression_optional()
                else:
                    self.error('Expected ")"')
            else:
                self.error('Expected "("')
        except SyntaxError as e:
            self.write_error(e)

    def part_loop(self):
        try:
            if self.current_token_class() == 'NRO':
                self.part()
                self.end_expression_optional()
            elif self.current_token_text() == '(':
                self.parenthesis_expression()
            else:
                self.error('Expected <NRO> or "("')
        except SyntaxError as e:
            self.write_error(e)

    def part(self):
        try: 
            if self.current_token_class() == 'NRO':
                self.next_token()
            elif self.current_token_class() == 'IDE':
                self.object_method_or_object_access_or_part()
            else:
                self.error('Expected <NRO> or <IDE>')
        except:
            pass

    def object_method_or_object_access_or_part(self):
        try:
            self.dec_object_attribute_access()
            print("11",self.current_token_text())
            self.optional_object_method_access()
        except:
            pass

    def dec_object_attribute_access(self):
        try:
            if self.current_token_class() == 'IDE':
                self.next_token()
                self.dimensions()
                self.end_object_attribute_access()
            else:
                self.error('Expected <IDE>')
        except SyntaxError as e:
            self.write_error(e)

    def method(self):
        try:
            if self.current_token_text() == 'void' or self.current_token_class() == 'IDE' or self.match_TYPE():
                self.next_token()
                if self.current_token_class() == 'IDE':
                    self.next_token()
                    if self.current_token_text() == '(':
                        self.next_token()
                        self.dec_parameters()
                    else: self.error('Expected "("')
                else: self.error('Expected <IDE>')
            else: self.error('Expected "void" or <IDE> or <TYPE>')
        except SyntaxError as e:
            self.write_error(e=e)
    
    def dec_parameters(self):
        try:
            if self.current_token_text() == ')':
                self.next_token()
                if self.current_token_text() == '{':
                    self.next_token()
                    self.method_body()
                else:
                    self.error('Expected "{"')
            elif self.match_TYPE():
                self.next_token()
                if self.current_token_class() == 'IDE': # fim de var param
                    self.next_token()
                    self.mult_dec_parameters()
                else:
                    self.error('Expected <IDE>')
            elif self.current_token_class() == 'IDE':
                self.next_token()
                if self.current_token_class() == 'IDE':
                    self.next_token()
                    self.mult_dec_parameters()
                else: self.error('Expected <IDE>')
            else:
                self.error('Expected " ) { " or <TYPE> or <IDE>')
        except SyntaxError as e:
            self.write_error(e)

    def mult_dec_parameters(self):
        try:
            if self.current_token_text() == ')':
                self.next_token()
                if self.current_token_text() == '{':
                    self.next_token()
                    self.method_body()
                else:
                    self.error('Expected "{"')
            elif self.current_token_text() == ',':
                self.next_token()
                if self.match_TYPE() or self.current_token_class() == 'IDE':
                    self.next_token()
                    if self.current_token_class() == 'IDE':
                        self.next_token()
                        self.mult_dec_parameters()
                    else:
                        self.error('Expected <IDE>')
                else:
                    self.error('Expected <TYPE> or <IDE>')
            else:
                self.error('Expected ")" or ","')
        except SyntaxError as e:
            self.write_error(e)

    def methods (self):
        try:
            if self.match_TYPE():
                self.method()
                self.methods()
            else:

                pass
        except SyntaxError as e:
            pass

    def methods_block(self):
        try:
            if self.current_token_text() == 'methods':
                self.next_token()
                if self.current_token_text() == '{':
                    self.next_token()
                    self.methods()
                    if self.current_token_text() == '}':
                        self.next_token()
                    else:
                        self.error('Expected "}"')
                else:
                    self.error('Expected "{"')
        except SyntaxError as e:
            self.write_error(e)

    #   <COMMANDS> (recursao de <COMMAND>)
    def commands(self):
        primeiro_command = ['print', 'read', 'if', 'for']
        try:
            if (self.current_token_text() in primeiro_command) or (self.current_token_class() == 'IDE'):
                self.command()
                self.commands()
            else:
                pass
        except SyntaxError as e:
            pass
